--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mysten/sui": "^1.34.0",
+    "@mysten/wallet-kit": "^0.8.6",
+    "@suiet/wallet-kit": "^0.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
